--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -44,6 +44,7 @@ anyhow = { workspace = true }
 quote = "1.0"
 syn = "2.0.39"
 prettyplease = "0.2.15"
+convert_case = "0.6.0"
 
 [features]
 testnet = ["tonlibjson-sys/testnet"]
