feat: TL parser and struct generator (#555)
* init tl_parser

* init tl parser

* support builtin types

* support constructor number

* single line comment

* multi line comment

* args parse

* pass fields

* optional fields

* functional combinators

* exclamation_point_modifier

* shot tx id gen

* boxed enum

* simplify RawFullAccountState

* gen all

* use latest block as default route

* drop aliases

--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -38,5 +38,13 @@ metrics = "0.21.1"
 tracing-test = { workspace = true }
 serial_test = "2.0.0"
 
+[build-dependencies]
+tl_parser = { path = "../tl_parser" }
+anyhow = { workspace = true }
+quote = "1.0"
+syn = "2.0.39"
+prettyplease = "0.2.15"
+convert_case = "0.6.0"
+
 [features]
 testnet = ["tonlibjson-sys/testnet"]
