--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -7,6 +7,9 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: x86_64-unknown-linux-gnu
     - name: Install LLVM and Clang
       id: llvm_setup
       shell: bash
@@ -29,12 +32,9 @@ runs:
     - uses: arduino/setup-protoc@v2
       with:
         repo-token: ${{ inputs.token }}
-    - uses: dtolnay/rust-toolchain@stable
-      with:
-        targets: x86_64-unknown-linux-gnu
-    - shell: bash
-      run: | 
-        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-${{ steps.llvm_setup.outputs.LLVM_VERSION }} 101
-        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-${{ steps.llvm_setup.outputs.LLVM_VERSION }} 101
+#    - shell: bash
+#      run: |
+#        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-${{ steps.llvm_setup.outputs.LLVM_VERSION }} 101
+#        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-${{ steps.llvm_setup.outputs.LLVM_VERSION }} 101
     - name: Run sccache-cache
       uses: mozilla-actions/sccache-action@v0.0.3
