--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -14,7 +14,7 @@ runs:
       id: llvm_setup
       shell: bash
       run: |
-        LLVM_VERSION=$(rustc --verbose --version | grep -Po 'LLVM version: \K\d+')
+        LLVM_VERSION=$(rustc --verbose --version | grep -Po 'LLVM version: \K\d+\.\d+.\d+')
         wget -qO- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo tee /etc/apt/trusted.gpg.d/apt.llvm.org.asc
         sudo add-apt-repository "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-$LLVM_VERSION main"
         sudo apt-get update
@@ -23,9 +23,9 @@ runs:
       uses: KyleMayes/install-llvm-action@v1
       with:
         version: "${{ steps.llvm_setup.outputs.LLVM_VERSION }}"
-#    - uses: awalsh128/cache-apt-pkgs-action@latest
-#      with:
-#        packages: libsecp256k1-dev libsodium-dev clang-${{ steps.llvm_setup.outputs.LLVM_VERSION }} lldb-${{ steps.llvm_setup.outputs.LLVM_VERSION }} lld-${{ steps.llvm_setup.outputs.LLVM_VERSION }} clangd-${{ steps.llvm_setup.outputs.LLVM_VERSION }} libc++-${{ steps.llvm_setup.outputs.LLVM_VERSION }}-dev
+    - uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: libsecp256k1-dev libsodium-dev
 #    - shell: bash
 #      run: |
 #        sudo apt install --yes libc++abi-${{ steps.llvm_setup.outputs.LLVM_VERSION }}-dev libc++-${{ steps.llvm_setup.outputs.LLVM_VERSION }}-dev
