--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -33,6 +33,7 @@ tokio-retry = "0.3"
 bytes = "1.5"
 crc = "3.0.1"
 metrics = "0.22.0"
+thiserror = "1.0.56"
 
 [dev-dependencies]
 tracing-test = { workspace = true }
