--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -34,6 +34,7 @@ bytes = "1.5"
 crc = "3.0.1"
 metrics = "0.22.0"
 thiserror = "1.0.56"
+xtra = { version = "0.6.0", features = ["tokio"] }
 
 [dev-dependencies]
 tracing-test = { workspace = true }
