--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,5 @@ opentelemetry-otlp = { version = "0.12.0", features = ["metrics"] }
 tracing-opentelemetry = "0.19.0"
 quick_cache = "0.4"
 url = { version = "2.5.0", features = ["serde"] }
+clap = { version = "4.5.2", features = ["derive"] }
+humantime = "2.1.0"
