--- a/ton-grpc/Cargo.toml
+++ b/ton-grpc/Cargo.toml
@@ -25,11 +25,11 @@ tonic-reflection = { workspace = true }
 tonic-health = { workspace = true }
 prost = { workspace = true }
 url = { workspace = true }
+clap = { workspace = true }
+humantime = { workspace = true }
 either = "1.10"
 derive-new = "0.6.0"
-clap = { version = "4.5.2", features = ["derive"] }
 metrics-exporter-prometheus = "0.13.1"
-humantime = "2.1.0"
 
 [dev-dependencies]
 tracing-test = { workspace = true }
