--- a/tvm-grpc/Cargo.toml
+++ b/tvm-grpc/Cargo.toml
@@ -21,8 +21,10 @@ prost = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio-stream = { workspace = true }
+humantime = { workspace = true }
 rayon = "1.9"
 quick_cache = "0.4"
+clap = { workspace = true }
 
 [build-dependencies]
 tonic-build = { workspace = true }
