--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -20,8 +20,8 @@ hex = { workspace = true }
 async-stream = { workspace = true }
 quick_cache = { workspace = true }
 url = { workspace = true }
+uuid = { workspace = true }
 dashmap = "5.5"
-uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] }
 pin-project = "1.1"
 reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"], default-features = false }
 hickory-resolver = { version = "0.24.0", features = ["tokio-runtime"] }
