--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -29,7 +29,7 @@ jobs:
           submodules: recursive
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: libsecp256k1-dev libsodium-dev
+          packages: libsecp256k1-dev libsodium-dev liblz4-dev
       - uses: arduino/setup-protoc@v3
       - uses: dtolnay/rust-toolchain@stable
         with:
