--- a/release-please-config.json
+++ b/release-please-config.json
@@ -22,6 +22,9 @@
     },
     "tonlibjson-client": {
       "release-type": "rust"
+    },
+    "adnl-tcp": {
+      "release-type": "rust"
     }
   }
 }
