--- a/adnl-tcp/Cargo.toml
+++ b/adnl-tcp/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 
 [dependencies]
+anyhow = { workspace = true }
+rand = "0.8.5"
+sha2 = "0.10.8"
+hex = "0.4.3"
