--- a/adnl-tcp/Cargo.toml
+++ b/adnl-tcp/Cargo.toml
@@ -6,6 +6,13 @@ authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 
 [dependencies]
 anyhow = { workspace = true }
+tracing = { workspace = true }
 rand = "0.8.5"
 sha2 = "0.10.8"
 hex = "0.4.3"
+aes = "0.8.4"
+ctr = "0.9.2"
+tokio-util = { version = "0.7.10", features = ["codec"] }
+
+[dev-dependencies]
+tracing-test = "0.2.4"
