--- a/adnl-tcp/Cargo.toml
+++ b/adnl-tcp/Cargo.toml
@@ -12,7 +12,12 @@ sha2 = "0.10.8"
 hex = "0.4.3"
 aes = "0.8.4"
 ctr = "0.9.2"
+ed25519-dalek = { version = "2.1.1", features = ["rand_core", "hazmat"] }
+futures = "0.3.30"
+tokio = { workspace = true }
 tokio-util = { version = "0.7.10", features = ["codec"] }
+pin-project = "1.1.5"
 
 [dev-dependencies]
 tracing-test = "0.2.4"
+base64 = "0.22.0"
