--- a/ton-liteserver-client/Cargo.toml
+++ b/ton-liteserver-client/Cargo.toml
@@ -3,6 +3,19 @@ name = "ton-liteserver-client"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[build-dependencies]
+tl_parser = { path = "../tl_parser" }
+anyhow = { workspace = true }
+quote = "1.0"
+syn = "2.0.58"
+prettyplease = "0.2.17"
+convert_case = "0.6.0"
 
 [dependencies]
+adnl-tcp = { path = "../adnl-tcp" }
+anyhow = { workspace = true }
+tokio = { workspace = true }
+tower = { workspace = true }
+
+[features]
+testnet = []
