--- a/adnl-tcp/Cargo.toml
+++ b/adnl-tcp/Cargo.toml
@@ -17,6 +17,7 @@ ed25519-dalek = { version = "2.1.1", features = ["rand_core", "hazmat"] }
 futures = "0.3.30"
 tokio-util = { version = "0.7.10", features = ["codec"] }
 pin-project = "1.1.5"
+bytes = "1.6.0"
 
 [dev-dependencies]
 tracing-test = "0.2.4"
