feat: init release of ton-liteserver-client

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -25,6 +25,9 @@
     },
     "adnl-tcp": {
       "release-type": "rust"
+    },
+    "ton-liteserver-client": {
+      "release-type": "rust"
     }
   }
 }
