split features test run

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -16,6 +16,11 @@ concurrency:
   cancel-in-progress: true
 jobs:
   pr-tests:
+    strategy:
+      matrix:
+        include:
+          - features: ''
+          - features: 'testnet'
     name: Run cargo tests
     runs-on:
       group: "CPUBound"
@@ -36,14 +41,14 @@ jobs:
           targets: x86_64-unknown-linux-gnu
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.4
-      - run: cargo test --target x86_64-unknown-linux-gnu --no-fail-fast
+      - run: cargo test --target x86_64-unknown-linux-gnu --no-fail-fast --features "${{ matrix.features }}"
         env:
           RUSTFLAGS: ""
           SCCACHE_GHA_ENABLED: "true"
           RUSTC_WRAPPER: "sccache"
           CMAKE_C_COMPILER_LAUNCHER: "sccache"
           CMAKE_CXX_COMPILER_LAUNCHER: "sccache"
-      - run: cargo test --target x86_64-unknown-linux-gnu --no-fail-fast --features testnet
+      - run: cargo test --target x86_64-unknown-linux-gnu --no-fail-fast --features testnet --features "${{ matrix.features }}"
         env:
           RUSTFLAGS: ""
           SCCACHE_GHA_ENABLED: "true"
