--- a/ton-liteserver-client/Cargo.toml
+++ b/ton-liteserver-client/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [build-dependencies]
-tl_parser = { path = "../tl_parser" }
+tl-parser = { path = "../tl-parser" }
 anyhow = { workspace = true }
 quote = "1.0"
 syn = "2.0.58"
