--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -40,7 +40,7 @@ tracing-test = { workspace = true }
 serial_test = "3.0.0"
 
 [build-dependencies]
-tl_parser = { path = "../tl_parser" }
+tl-parser = { path = "../tl-parser" }
 anyhow = { workspace = true }
 quote = "1.0"
 syn = "2.0.60"
