--- a/ton-liteserver-client/Cargo.toml
+++ b/ton-liteserver-client/Cargo.toml
@@ -13,6 +13,7 @@ convert_case = "0.6.0"
 
 [dependencies]
 adnl-tcp = { path = "../adnl-tcp" }
+tl-core = { path = "../tl-core" }
 anyhow = { workspace = true }
 tokio = { workspace = true }
 tower = { workspace = true }
