--- a/.github/workflows/pr-tests-mac.yaml
+++ b/.github/workflows/pr-tests-mac.yaml
@@ -30,5 +30,5 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - run: brew install secp256k1 libsodium liblz4 protobuf
+      - run: brew install secp256k1 libsodium lz4 protobuf
       - run: cargo test --no-fail-fast --features "${{ matrix.features }}"
