Revert "check macos release build"
This reverts commit 1b4b9d35fb38bdef255a24312f89ec90bdd0bef0.

--- a/.github/workflows/pr-tests-mac.yaml
+++ b/.github/workflows/pr-tests-mac.yaml
@@ -31,4 +31,4 @@ jobs:
         with:
           submodules: recursive
       - run: brew install secp256k1 libsodium lz4 protobuf
-      - run: cargo test --no-fail-fast --features "${{ matrix.features }}" --release
+      - run: cargo test --no-fail-fast --features "${{ matrix.features }}"
