--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ members = [
 anyhow = { version = "1.0", features = ["backtrace"]}
 tower = { version = "0.4", features = ["full"] }
 tokio = { version = "1.37", features = ["full"] }
+tokio-util = { version = "0.7", features = ["codec"] }
+tokio-stream = { version = "0.1", features = ["sync"]}
 futures = "0.3"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -22,7 +24,6 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["serde_derive"] }
 base64 = "0.22"
 hex = "0.4"
-tokio-stream = { version = "0.1", features = ["sync"]}
 tracing-test = "0.2.4"
 async-stream = "0.3.5"
 tonic = { version = "0.9", features = ["gzip"] }
