--- a/tonlibjson-client/Cargo.toml
+++ b/tonlibjson-client/Cargo.toml
@@ -21,7 +21,7 @@ async-stream = { workspace = true }
 quick_cache = { workspace = true }
 url = { workspace = true }
 uuid = { workspace = true }
-tokio-util = { version = "0.7.10" }
+tokio-util = { workspace = true }
 dashmap = "5.5"
 pin-project = "1.1"
 reqwest = { version = "0.11", features = ["rustls-tls", "trust-dns"], default-features = false }
