--- a/ton-liteserver-client/Cargo.toml
+++ b/ton-liteserver-client/Cargo.toml
@@ -15,6 +15,7 @@ convert_case = "0.6.0"
 adnl-tcp = { path = "../adnl-tcp" }
 anyhow = { workspace = true }
 tokio = { workspace = true }
+tokio-util = { workspace = true }
 tower = { workspace = true }
 tracing = { workspace = true }
 dashmap = "5.5.3"
