--- a/tonlibjson-sys/Cargo.toml
+++ b/tonlibjson-sys/Cargo.toml
@@ -3,6 +3,10 @@ name = "tonlibjson-sys"
 version = "0.3.1"
 edition = "2021"
 authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
+license = "MIT"
+links = "tonlibjson"
+description = "Rust binding for tonlibjson from https://github.com/ton-blockchain/ton"
+repository = "https://github.com/getgems-io/ton-grpc"
 
 [dependencies]
 libc = "0.2"
