--- a/adnl-tcp/Cargo.toml
+++ b/adnl-tcp/Cargo.toml
@@ -22,3 +22,8 @@ bytes = "1.6.0"
 [dev-dependencies]
 tracing-test = "0.2.4"
 base64 = "0.22.1"
+
+[features]
+default = ["client"]
+server = []
+client = []
