--- a/ton-liteserver-client/Cargo.toml
+++ b/ton-liteserver-client/Cargo.toml
@@ -12,7 +12,7 @@ prettyplease = "0.2.17"
 convert_case = "0.6.0"
 
 [dependencies]
-adnl-tcp = { path = "../adnl-tcp" }
+adnl-tcp = { path = "../adnl-tcp", features = ["client"] }
 anyhow = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
