--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -39,8 +39,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-unknown-linux-gnu
-      - name: Run sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.4
+      - uses: mozilla-actions/sccache-action@v0.0.4
       - run: cargo test --target x86_64-unknown-linux-gnu --no-fail-fast --features "${{ matrix.features }}"
         env:
           RUSTFLAGS: ""
