--- a/adnl-tcp/Cargo.toml
+++ b/adnl-tcp/Cargo.toml
@@ -9,19 +9,19 @@ anyhow = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 tokio-util = { workspace = true }
-rand = "0.8.5"
+rand = { workspace = true }
+futures = { workspace = true }
+pin-project = { workspace = true }
+bytes = { workspace = true }
 sha2 = "0.10.8"
 hex = "0.4.3"
 aes = "0.8.4"
 ctr = "0.9.2"
 ed25519-dalek = { version = "2.1.1", features = ["rand_core", "hazmat"] }
-futures = "0.3.30"
-pin-project = "1.1.5"
-bytes = "1.6.0"
 
 [dev-dependencies]
+base64 = { workspace = true }
 tracing-test = "0.2.4"
-base64 = "0.22.1"
 
 [features]
 default = ["client"]
