--- a/ton-liteserver-client/Cargo.toml
+++ b/ton-liteserver-client/Cargo.toml
@@ -18,17 +18,17 @@ tokio = { workspace = true }
 tokio-util = { workspace = true }
 tower = { workspace = true }
 tracing = { workspace = true }
-dashmap = "5.5.3"
-bytes = "1.6.0"
-pin-project = "1.1.5"
-futures = "0.3.30"
-rand = "0.8.5"
-tokio-stream = "0.1.15"
-thiserror = "1.0.59"
+dashmap = { workspace = true }
+bytes = { workspace = true }
+pin-project = { workspace = true }
+rand = { workspace = true }
+thiserror = { workspace = true }
+futures = { workspace = true }
+tokio-stream = { workspace = true }
 
 [dev-dependencies]
-hex = "0.4.3"
-base64 = "0.22.1"
+hex = { workspace = true }
+base64 = { workspace = true }
 tracing-test = "0.2.4"
 tracing-subscriber = "0.3.18"
 
