--- a/tvm-grpc/Cargo.toml
+++ b/tvm-grpc/Cargo.toml
@@ -22,7 +22,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tokio-stream = { workspace = true }
 humantime = { workspace = true }
-quick_cache = "0.5"
+quick_cache = { workspace = true }
 clap = { workspace = true }
 uuid = { workspace = true }
 
