--- a/adnl-tcp/Cargo.toml
+++ b/adnl-tcp/Cargo.toml
@@ -24,6 +24,6 @@ base64 = { workspace = true }
 tracing-test = "0.2.4"
 
 [features]
-default = ["client"]
+default = ["client", "server"]
 server = []
 client = []
