--- a/adnl-tcp/Cargo.toml
+++ b/adnl-tcp/Cargo.toml
@@ -13,6 +13,7 @@ rand = { workspace = true }
 futures = { workspace = true }
 pin-project = { workspace = true }
 bytes = { workspace = true }
+thiserror = { workspace = true }
 sha2 = "0.10.8"
 hex = "0.4.3"
 aes = "0.8.4"
