--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -38,7 +38,7 @@ jobs:
         uses: mozilla-actions/sccache-action@v0.0.4
       - uses: actions-rs/clippy-check@v1
         env:
-          RUSTFLAGS: ""
+          CARGO_INCREMENTAL: "0"
           SCCACHE_GHA_ENABLED: "true"
           RUSTC_WRAPPER: "sccache"
           CMAKE_C_COMPILER_LAUNCHER: "sccache"
