--- a/.github/workflows/ton-grpc-release.yaml
+++ b/.github/workflows/ton-grpc-release.yaml
@@ -28,8 +28,11 @@ jobs:
       - uses: ./.github/actions/prepare
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      - run: TONLIBJSON_SYS_LLD=1 TONLIBJSON_SYS_LTO=1 cargo build -v --bin ton-grpc --config .cargo/docker.toml --target x86_64-unknown-linux-gnu --release --features "${{ matrix.features }}"
+      - run:  cargo build -v --bin ton-grpc --config .cargo/docker.toml --target x86_64-unknown-linux-gnu --release --features "${{ matrix.features }}"
         env:
+          CARGO_INCREMENTAL: "0"
+          TONLIBJSON_SYS_LLD: "1"
+          TONLIBJSON_SYS_LTO: "1"
           SCCACHE_GHA_ENABLED: "true"
           RUSTC_WRAPPER: "sccache"
           CMAKE_C_COMPILER_LAUNCHER: "sccache"
