--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ members = [
     "ton-grpc",
     "tvm-grpc",
     "adnl-tcp",
-    "ton-liteserver-client"
+    "ton-liteserver-client",
+    "ton-types"
 ]
 
 [workspace.dependencies]
