--- a/ton-types/Cargo.toml
+++ b/ton-types/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2021"
 authors = ["Andrei Kostylev <a.kostylev@pm.me>"]
 
 [dependencies]
+bytes = { workspace = true }
+thiserror = { workspace = true }
+anyhow = { workspace = true }
+
+[dev-dependencies]
+hex = { workspace = true }
