--- a/ton-liteserver-client/Cargo.toml
+++ b/ton-liteserver-client/Cargo.toml
@@ -13,7 +13,7 @@ convert_case = "0.6.0"
 
 [dependencies]
 adnl-tcp = { path = "../adnl-tcp", features = ["client"] }
-ton-types = { path = "../ton-types" }
+toner.workspace = true
 anyhow = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
