--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,1 +1,1 @@
-{"charts/ton-grpc":"0.7.0","charts/tvm-grpc":"0.6.0","ton-grpc":"0.10.3","tvm-grpc":"0.7.1","tonlibjson-client":"0.17.2","tonlibjson-sys":"0.3.1","adnl-tcp":"0.1.0"}
+{"charts/ton-grpc":"0.7.0","charts/tvm-grpc":"0.6.0","ton-grpc":"0.10.4","tvm-grpc":"0.7.2","tonlibjson-client":"0.18.0","tonlibjson-sys":"0.4.0","adnl-tcp":"0.2.0","ton-liteserver-client":"0.1.0","ton-contract":"0.1.1"}
