--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -23,7 +23,7 @@ runs:
       run: |
         wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
         sudo add-apt-repository "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-$LLVM_MAJOR_VERSION main"
-      with:
+      env:
         LLVM_MAJOR_VERSION=${{ steps.llvm_setup.outputs.LLVM_VERSION }}
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with:
